[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/Nanoboss/Nanoboss.gd" type="Script" id=1]
[ext_resource path="res://Entity/HealthBar/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Nanoboss/NanobossSpritemap.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Nanoboss/SlashSpritemap.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 13 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Leg2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Leg3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Leg:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -19 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Head:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -19 ), Vector2( 0, -18.5 ), Vector2( 0, -19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Leg:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Leg2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Leg3:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -4.5 ), Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walking"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Leg:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 0.4, 1 ),
"update": 0,
"values": [ -0.496683, -55.0, -0.496683 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Leg2:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 0.392291, 1 ),
"update": 0,
"values": [ 0.496683, 55.0, 0.496683 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Leg3:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 0.4, 1 ),
"update": 0,
"values": [ Vector2( 0, -4.01656 ), Vector2( 0, -8 ), Vector2( 0, -4.01656 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Head:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.147962, 0.3, 0.447962, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -18 ), Vector2( 0, -19 ), Vector2( 0, -18 ), Vector2( 0, -19 ), Vector2( 0, -18 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 100, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "hit",
"speed": 32.0
} ]

[node name="Nanoboss" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )
health_bar_path = NodePath("HealthBar")
MAX_HEALTH = 26
knockback_resistance = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -13 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/idle = SubResource( 1 )
anims/walking = SubResource( 2 )

[node name="Sprite" type="Node2D" parent="."]

[node name="Leg" type="Node2D" parent="Sprite"]
position = Vector2( 4, -4 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="Leg" type="Sprite" parent="Sprite/Leg"]
position = Vector2( 2, -4 )
texture = ExtResource( 3 )
hframes = 4
vframes = 4
frame = 4

[node name="Leg2" type="Node2D" parent="Sprite"]
position = Vector2( -4, -4 )
__meta__ = {
"_edit_group_": true
}

[node name="Leg" type="Sprite" parent="Sprite/Leg2"]
position = Vector2( -2, -4 )
texture = ExtResource( 3 )
flip_h = true
hframes = 4
vframes = 4
frame = 4

[node name="Leg3" type="Node2D" parent="Sprite"]
position = Vector2( 0, -4 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="Leg" type="Sprite" parent="Sprite/Leg3"]
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
flip_h = true
hframes = 4
vframes = 4
frame = 5

[node name="Head" type="Sprite" parent="Sprite"]
position = Vector2( 1, -19 )
z_index = 1
texture = ExtResource( 3 )
hframes = 4
vframes = 4

[node name="Body" type="Sprite" parent="Sprite"]
position = Vector2( -2, -11 )
texture = ExtResource( 3 )
hframes = 4
vframes = 4
frame = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -20 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -10 )
cast_to = Vector2( 36, 0 )
collision_mask = 7

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 22, -11 )
scale = Vector2( 2.5, 2 )
frames = SubResource( 14 )
animation = "hit"
frame = 7
playing = true
flip_h = true

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_left = -16.0
margin_top = -39.0
margin_right = 16.0
margin_bottom = -35.0

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
